
 * LUCENE-3730: Refine Kuromoji search mode (Mode.SEARCH) decompounding
   heuristics.  (Christian Moen via Robert Muir)

 * LUCENE-3767: Kuromoji tokenizer/analyzer produces both compound words 
   and the segmentation of that compound in Mode.SEARCH. (Robert Muir, Mike McCandless via Christian Moen)

 * LUCENE-3685: Add ToChildBlockJoinQuery and renamed previous
   BlockJoinQuery to ToParentBlockJoinQuery, so that you can now do
   joins in both parent to child and child to parent directions.
   (Mike McCandless)

 * LUCENE-1812: Added static index pruning contrib module.
   (Andrzej Bialecki, Doron Cohen)

 * LUCENE-3602: Added query time joining under the join module. (Martijn van Groningen, Michael McCandless)

 * LUCENE-3714: Add WFSTCompletionLookup suggester that supports more fine-grained
   ranking for suggestions.  (Mike McCandless, Dawid Weiss, Robert Muir)

API Changes

 * LUCENE-3596: DirectoryTaxonomyWriter.openIndexWriter() now takes an
   openIndexWriter parameter rather than just an open-mode. (Doron Cohen)

 * LUCENE-3606: FieldNormModifier was deprecated, because IndexReader's
   setNorm() was deprecated. Furthermore, this class is broken, as it does
   not take position overlaps into account while recalculating norms.
   (Uwe Schindler, Robert Muir)

Changes in runtime behavior

 * LUCENE-3626: PKIndexSplitter and MultiPassIndexSplitter now work
   per segment.  (Uwe Schindler)
   
 * SOLR-3105: When passed LUCENE_36 or greater as version, GermanAnalyzer,
   SpanishAnalyzer, FrenchAnalyzer, ItalianAnalyzer, and PortugueseAnalyzer
   use a lighter stemming approach, CatalanAnalyzer uses ElisionFilter 
   with a set of contractions, HindiAnalyzer uses StandardTokenizer, and
   ThaiAnalyzer uses thai stopwords. Add GermanNormalizationFilter which applies
   the Snowball German2 algorithm to ae/oe/ue and case-folds ß. Add 
   GalicianMinimalStemFilter for plural removal only. (Robert Muir)
